--- a/config.json
+++ b/config.json
@@ -1,10 +1,11 @@
 {
   "provider": "vllm",
   "prompt_type": "concise",
+  "step_size": "small",
   "concise_hint": "Really don't overthink too hard and be concise in your final output.",
   "models": {
     "openai": "o4-mini",
-    "vllm": "QuixiAI/Qwen3-235B-A22B-AWQ"
+    "vllm": "Qwen/Qwen3-235B-A22B-FP8"
   }
 }
 
